<resources>
    <string name="app_name">FastReportsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="documents">Документы</string>
    <string name="templates">Шаблоны</string>
    <string name="reports">Отчеты</string>
    <string name="exports">Экспорты</string>
    <string name="groups">Группы</string>
    <string name="users">Пользователи</string>
    <string name="apikeys">API ключи</string>
    <string name="additionally">Дополнительно</string>
    <string name="name">Название</string>
    <string name="size">Размер</string>
    <string name="last_update">Последнее изменение</string>
    <string name="delete">Удалить</string>
    <string name="rename">Переименовать</string>
    <string name="create_folder">Создать папку</string>
    <string name="ownload_template">Загрузить шаблон</string>
    <string name="reate_template">Создать шаблон</string>
    <string name="download_report">Загрузить отчет</string>
    <string name="copy">Копировать</string>
    <string name="export">Экспортировать</string>
    <string name="select_export">Выбор экспорта</string>
    <string name="name_file">Наименование</string>
    <string name="rename2">Переименование</string>
</resources>